# git-reword

./: README.md  clean  git-reword  howitworks.md
cpp_libgit2/: CMakeLists.txt  br  git-reword
cpp_libgit2/scripts/: build  build_run  clean  run
cpp_libgit2/src/: main.cpp
py_git/: git-reword.py
py_git-rebase/: git-reword.py  git_editor.py
py_utility/: gr_module.py
tools/: gen_commits  new_repo
